# stock-chart-web-rs

./: Cargo.toml  README.md
assets/: index.html  script.js  style.css
src/: main.rs
